wip: change list output to S3Obj
instead of simple strings
