# openapi.yaml
@@ -168,7 +168,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
+                  $ref: '#/components/schemas/S3Obj'
         '400':
           description: 'Invalid value for: path parameter modelVersion'
           content:
@@ -347,6 +347,23 @@ components:
             $ref: '#/components/schemas/ByRow'
         featureReports:
           $ref: '#/components/schemas/Map_Seq_ByFeature'
+    S3Obj:
+      required:
+      - bucket
+      - key
+      - lastModified
+      - fullPath
+      type: object
+      properties:
+        bucket:
+          type: string
+        key:
+          type: string
+        lastModified:
+          type: string
+          format: date-time
+        fullPath:
+          type: string
     Signature:
       type: object
       properties:
